--- a/verify.html
+++ b/verify.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html class="no-js">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Verify Email</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/font.css">
@@ -25,11 +29,12 @@
             }
         });
 
-        // フォーム submit イベントで確認処理
+        // フォーム送信時にユーザー確認
         document.addEventListener('DOMContentLoaded', function() {
             const form = document.getElementById('verifyForm');
             form.addEventListener('submit', async function(event) {
-                event.preventDefault(); // ページリロード防止
+                event.preventDefault();  // ページリロード防止
+
                 const email = document.getElementById('emailInputVerify').value;
                 const code = document.getElementById('codeInputVerify').value;
 
@@ -45,9 +50,8 @@
     </script>
 </head>
 <body>
-
     <header>
-        <img src="images/logo.png" alt="Logo">
+        <img src="images/logo.png">
     </header>
 
     <section class="form-wrap">
@@ -59,8 +63,9 @@
         </form>
     </section>
 
-    <!-- 外部 JS ライブラリ -->
     <script src="js/vendor/jquery-3.1.0.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/cognito-auth.js"></script>
 </body>
 </html>
