--- a/verify.html
+++ b/verify.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Verify Email</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -20,52 +16,50 @@
     <script src="https://unpkg.com/@aws-amplify/auth"></script>
 
     <script>
-        // Amplify 設定
-        Amplify.configure({
-            Auth: {
-                region: 'ap-southeast-2',
-                userPoolId: 'ap-southeast-2_OuvpJbU5m',        // register.html と同じ
-                userPoolWebClientId: '4kppa7j77h6pegkf6fvp7d7hua' // register.html と同じ
-            }
-        });
+      // Amplify の設定
+      Amplify.configure({
+        Auth: {
+          region: 'ap-southeast-2',
+          userPoolId: 'ap-southeast-2_OuvpJbU5m',        // register.html と同じ
+          userPoolWebClientId: '4kppa7j77h6pegkf6fvp7d7hua' // register.html と同じ
+        }
+      });
 
-        // フォーム送信時にユーザー確認
-        document.addEventListener('DOMContentLoaded', function() {
-            const form = document.getElementById('verifyForm');
-            form.addEventListener('submit', async function(event) {
-                event.preventDefault();  // ページリロード防止
+      // フォーム送信時の確認処理
+      async function confirmUser(event) {
+        event.preventDefault();  // ページリロード防止
+        const email = document.getElementById('emailInputVerify').value;
+        const code = document.getElementById('codeInputVerify').value;
 
-                const email = document.getElementById('emailInputVerify').value;
-                const code = document.getElementById('codeInputVerify').value;
+        try {
+          await Amplify.Auth.confirmSignUp(email, code);
+          alert("ユーザー確認完了！");
+        } catch (err) {
+          alert("確認エラー: " + err.message);
+          console.error(err);
+        }
+      }
 
-                try {
-                    await Auth.confirmSignUp(email, code);
-                    alert("ユーザー確認完了！");
-                } catch (err) {
-                    alert("確認エラー: " + err.message);
-                    console.error(err);
-                }
-            });
-        });
+      window.addEventListener('DOMContentLoaded', () => {
+        document.getElementById('verifyForm').addEventListener('submit', confirmUser);
+      });
     </script>
 </head>
 <body>
     <header>
-        <img src="images/logo.png">
+      <img src="images/logo.png" alt="Logo">
     </header>
 
     <section class="form-wrap">
         <h1>Verify Email</h1>
         <form id="verifyForm">
-            <input type="email" id="emailInputVerify" placeholder="Email" required>
-            <input type="text" id="codeInputVerify" placeholder="Verification Code" pattern=".*" required>
-            <input type="submit" value="Verify">
+          <input type="email" id="emailInputVerify" placeholder="Email" required>
+          <input type="text" id="codeInputVerify" placeholder="Verification Code" required>
+          <input type="submit" value="Verify">
         </form>
     </section>
 
     <script src="js/vendor/jquery-3.1.0.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/cognito-auth.js"></script>
 </body>
 </html>
