--- a/register.html
+++ b/register.html
@@ -1,98 +1,66 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>WildRydes Registration</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- AWS Amplify CDN -->
+    <script src="https://unpkg.com/@aws-amplify/core"></script>
+    <script src="https://unpkg.com/@aws-amplify/auth"></script>
 
-        <link rel="stylesheet" href="css/font.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="/css/message.css">
-
-
-<script src="https://unpkg.com/@aws-amplify/core"></script>
-<script src="https://unpkg.com/@aws-amplify/auth"></script>
-<script>
-  // Cognito 設定
-  Amplify.configure({
-    Auth: {
-      region: 'ap-southeast-2',
-      userPoolId: 'ap-southeast-2_OuvpJbU5m',        // 既存のUserPoolId
-      userPoolWebClientId: '4kppa7j77h6pegkf6fvp7d7hua' // 既存のClientId
-    }
-  });
-
-  async function signUpUser() {
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-
-    try {
-      const data = await Auth.signUp({
-        username: email,         // ← メールアドレスそのまま
-        password: password,
-        attributes: { email }    // email 属性も同じ
+    <script>
+      // Amplify 設定
+      Amplify.configure({
+        Auth: {
+          region: 'ap-southeast-2',
+          userPoolId: 'ap-southeast-2_OuvpJbU5m',         // 既存のUserPoolId
+          userPoolWebClientId: '4kppa7j77h6pegkf6fvp7d7hua' // 既存のClientId
+        }
       });
-      alert("登録成功！メールを確認してください。");
-      console.log(data);
-    } catch (err) {
-      alert("エラー: " + err.message);
-      console.error(err);
-    }
-  }
 
-  document.getElementById('registerButton').addEventListener('click', signUpUser);
-</script>
+      async function registerUser(event) {
+        event.preventDefault();
 
+        const email = document.getElementById('emailInput').value;
+        const password = document.getElementById('passwordInput').value;
 
+        try {
+          const result = await Amplify.Auth.signUp({
+            username: email,       // ← ここをメールアドレスに固定
+            password: password,
+            attributes: {
+              email: email         // email 属性もメールアドレス
+            },
+            autoSignIn: {           // 確認後に自動サインイン（必要であれば true/false）
+              enabled: false
+            }
+          });
 
+          alert("登録成功！メールを確認して認証コードを入力してください。");
+          console.log(result);
 
+        } catch (err) {
+          alert("登録エラー: " + err.message);
+          console.error(err);
+        }
+      }
 
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+      document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('registerForm').addEventListener('submit', registerUser);
+      });
+    </script>
+</head>
+<body>
+    <h1>WildRydes ユーザー登録</h1>
+    <form id="registerForm">
+        <label>Email</label>
+        <input type="email" id="emailInput" placeholder="メールアドレス" required><br><br>
 
-        <div id="noCognitoMessage" class="configMessage" style="display: none;">
-            <div class="backdrop"></div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">No Cognito User Pool Configured</h3>
-                </div>
-                <div class="panel-body">
-                    <p>There is no user pool configured in <a href="/js/config.js">/js/config.js</a>. You'll configure this in Module 2 of the workshop.</p>
-                </div>
-            </div>
-        </div>
+        <label>Password</label>
+        <input type="password" id="passwordInput" placeholder="パスワード" required><br><br>
 
-        <header>
-          <img src="images/logo.png">
-        </header>
-
-        <section class="form-wrap">
-            <h1>Register</h1>
-            <form id="registrationForm">
-              <input type="email" id="emailInputRegister" placeholder="Email" pattern=".*" required>
-              <input type="password" id="passwordInputRegister" placeholder="Password" pattern=".*" required>
-              <input type="password" id="password2InputRegister" placeholder="Confirm Password" pattern=".*" required>
-
-              <input type="submit" value="Let's Ryde">
-            </form>
-        </section>
-
-        <script src="js/vendor/jquery-3.1.0.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/vendor/aws-cognito-sdk.min.js"></script>
-        <script src="js/vendor/amazon-cognito-identity.min.js"></script>
-        <script src="js/config.js"></script>
-        <script src="js/cognito-auth.js"></script>
-    </body>
+        <button type="submit">登録</button>
+    </form>
+</body>
 </html>
